welcome.lessons.welcome.array.arrayfront9.ArrayFront9.scala.error
arrayFront9:-6: error: Missing closing brace `}' assumed here
try {
^arrayFront9:1: error: expected class or object definition
def arrayFront9(nums:Array[Int]): Boolean = {
^